<resources>
    <string name="app_name">GameAppAndroid</string>
    <string name="LoginCaption">Log In</string>
    <string name="RegisterCaption">Register</string>
    <string name="PasswordCaption">Password</string>
    <string name="NameCaption">Name</string>
    <string name="EmailCaption">Email</string>
    <string name="ButtonToolBarProfileName">Profile</string>
    <string name="ButtonRedirectRegister">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>